Cache static assets

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -47,8 +47,8 @@
       f.parentNode.insertBefore(j, f);
     })(window, document, "script", "dataLayer", "GTM-T4KMQ2F");</script>
   <!-- End Google Tag Manager -->
-  <link rel="stylesheet" href="/stylesheets/style.css">
-  <link rel="stylesheet" href="/stylesheets/blog.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/blog.css">
 
 </head>
 {% include 'shared/header.html' %}
@@ -225,7 +225,7 @@
           <div class="display-none mdc-layout-grid__cell">
           </div>
           <div class="button mdc-layout-grid__cell">
-            <a name="Contact Us Button" title="Get in touch with us today Button" class="btn" href="mailto:blockchain&#64;topmonks.com">Get in touch with us today</a>
+            <a title="Get in touch with us today Button" class="btn" href="mailto:blockchain&#64;topmonks.com">Get in touch with us today</a>
           </div>
           <div class="display-none mdc-layout-grid__cell">
           </div>
@@ -291,8 +291,7 @@
           </div>
 
           <div class="blog__box mdc-layout-grid__cell">
-            <a name="Link to Article"
-               href="https://btctip.cz/makerdao-vyhody-nevyhody-a-budoucnost-projektu/"
+            <a href="https://btctip.cz/makerdao-vyhody-nevyhody-a-budoucnost-projektu/"
                class="mdc-layout-grid__cell--span-12">
               <article class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -312,7 +311,7 @@
                   </div>
                   <div
                     class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-                    <a name="Show Article Button" href="https://btctip.cz/makerdao-vyhody-nevyhody-a-budoucnost-projektu/">Show
+                    <a href="https://btctip.cz/makerdao-vyhody-nevyhody-a-budoucnost-projektu/">Show
                       article</a>
                   </div>
                 </div>
@@ -322,14 +321,13 @@
 
 
           <div class="blog__box mdc-layout-grid__cell">
-            <a name="Link to Article"
-               href="https://hackernoon.com/ai-is-a-distraction-interview-with-harry-halpin-ceo-of-nym-e1433x3v"
+            <a href="https://hackernoon.com/ai-is-a-distraction-interview-with-harry-halpin-ceo-of-nym-e1433x3v"
                class="mdc-layout-grid__cell--span-12">
               <div class="mdc-layout-grid__inner">
 
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                   <img width="100%" alt="Photo for an article"
-                       src="../images/articles-img/2019-11-11.jpg">
+                       src="/images/articles-img/2019-11-11.jpg">
                 </div>
                 <div class="blog__box-body mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                   <span class="published-date">NOVEMBER 11TH 2019</span>
@@ -344,7 +342,7 @@
                   </div>
                   <div
                     class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-                    <a name="Show Article Button" href="https://hackernoon.com/ai-is-a-distraction-interview-with-harry-halpin-ceo-of-nym-e1433x3v">Show
+                    <a href="https://hackernoon.com/ai-is-a-distraction-interview-with-harry-halpin-ceo-of-nym-e1433x3v">Show
                       article</a>
                   </div>
                 </div>
@@ -354,14 +352,13 @@
 
 
           <div class="blog__box mdc-layout-grid__cell">
-            <a name="Link to Article"
-               href="https://btctip.cz/makerdao-a-dai-urok-jako-zly-sluha-i-spatny-pan/"
+            <a href="https://btctip.cz/makerdao-a-dai-urok-jako-zly-sluha-i-spatny-pan/"
                class="mdc-layout-grid__cell--span-12">
               <div class="mdc-layout-grid__inner">
 
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                   <img width="100%" alt="Photo for an article"
-                       src="../images/articles-img/2019-11-07.jpg">
+                       src="/images/articles-img/2019-11-07.jpg">
                 </div>
                 <div class="blog__box-body mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                   <span class="published-date">NOVEMBER 7TH 2019</span>
@@ -376,7 +373,7 @@
                   </div>
                   <div
                     class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-                    <a name="Show Article Button" href="https://btctip.cz/makerdao-a-dai-urok-jako-zly-sluha-i-spatny-pan/">Show
+                    <a href="https://btctip.cz/makerdao-a-dai-urok-jako-zly-sluha-i-spatny-pan/">Show
                       article</a>
                   </div>
                 </div>
@@ -388,7 +385,7 @@
           <div class="display-none mdc-layout-grid__cell">
           </div>
           <div class="button mdc-layout-grid__cell">
-            <a name="Show More Articles" title="Hire our dTeam Button" class="btn" href="/blog">Show more articles</a>
+            <a title="Hire our dTeam Button" class="btn" href="/blog/">Show more articles</a>
           </div>
           <div class="display-none mdc-layout-grid__cell">
           </div>
@@ -409,7 +406,6 @@
             <h3>Lea Petrášová</h3>
             <p>Blockchain & Crypto&nbsp;Projects</p>
             <a href="https://www.linkedin.com/in/leapetras/"
-               name="LinkedIn - Lea Petrášová"
                title="Lea Petrášová on LinkedIn">
               <svg width="35px" height="35px" viewBox="0 0 35 35" version="1.1" xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -434,7 +430,7 @@
                  alt="[photo] Lumír Mrkva" width="92" height="92">
             <h3>Lumír Mrkva</h3>
             <p>Tech Lead</p>
-            <a href="https://github.com/lumir-mrkva" name="Github - Lumír Mrkva" title="Lumír Mrkva on GitHub">
+            <a href="https://github.com/lumir-mrkva" title="Lumír Mrkva on GitHub">
               <svg width="35px" height="36px" viewBox="0 0 35 36" version="1.1" xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink">
                 <title>GitHub Icon</title>
@@ -462,7 +458,7 @@
             <h3>Josef Tětek</h3>
             <p>Crypto Analyst</p>
 
-            <a href="https://twitter.com/KryptoJoseph" name="Twitter - Josef Tětek" title="Josef Tětek on Twitter">
+            <a href="https://twitter.com/KryptoJoseph" title="Josef Tětek on Twitter">
               <svg width="35px" height="35px" viewBox="0 0 32 32" version="1.1"
                    xmlns="http://www.w3.org/2000/svg">
                 <title>Twitter Icon</title>
@@ -484,16 +480,10 @@
                 </g>
               </svg>
             </a>
-
-
-
           </div>
-
         </div>
       </div>
     </section>
-
-
   </main>
 </div>
 </body>
