--- a/caffe.topmonks.cz/src/html/index.html
+++ b/caffe.topmonks.cz/src/html/index.html
@@ -20,26 +20,22 @@
   <link rel="preconnect" href="//www.google-analytics.com">
   <link rel="preconnect" href="//static.hotjar.com">
   <link rel="preload" href="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" as="script" crossorigin>
-  <link rel="preload" href="https://use.typekit.net/her1ktw.js" as="script">
+  <link rel="preload" href="https://use.typekit.net/her1ktw.css" as="style">
   <link rel="preload" href="https://www.googletagmanager.com/gtm.js?id=GTM-T4KMQ2F" as="script">
-  <script>WebFontConfig = { typekit: { id: "her1ktw" }, async: true };</script>
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" async defer
-          integrity="sha384-pvXSwSU09c+q9mPyY++ygUHWIYRoaxgnJ/JC5wcOzMb/NVVu+IDniiB9qWp3ZNWM"
-          crossorigin="anonymous"></script>
   <meta name="theme-color" content="#F06B4F">
   <meta name="description"
-        content="Teach or die, learn or die. Každý první čtvrtek v měsíci se setkáváme, přednášíme a diskutujeme o tématech, která nás baví.">
+  content="Teach or die, learn or die. Každý první čtvrtek v měsíci se setkáváme, přednášíme a diskutujeme o tématech, která nás baví.">
   <link rel="canonical" href="https://caffe.topmonks.cz/">
   <meta name="twitter:site" content="@topmonks">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://caffe.topmonks.cz/">
 
-  <link rel="stylesheet" href="/stylesheets/main.css">
-  <link rel="stylesheet" href="/stylesheets/footer.css">
-  <link rel="stylesheet" href="/stylesheets/header.css">
+  <link rel="stylesheet" href="https://use.typekit.net/her1ktw.css">
+  <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 
 <body>
+<link rel="stylesheet" href="/assets/css/header.css">
 <header class="tm-app-bar">
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
@@ -367,6 +363,7 @@
 
 </main>
 
+<link rel="stylesheet" href="/assets/css/footer.css">
 <footer class="tm-caffe-footer">
   <div class="nav-and-contacts">
     <div class="mdc-layout-grid">
@@ -411,7 +408,7 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
-          <p>© 2019 TopMonks s.r.o.</p></div>
+          <p>© 2020 TopMonks s.r.o.</p></div>
         <div
           class="footer_social-buttons mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
           <div class="social-buttons"><a href="https://www.linkedin.com/company/topmonks/" title="TopMonks on LinkedIn"
