--- a/www.topmonks.cz/src/html/kontakt/index.html
+++ b/www.topmonks.cz/src/html/kontakt/index.html
@@ -170,12 +170,15 @@
         <h3><b>Konzultace v&nbsp;retailu a fintechu</b></h3>
         <p class="box_text-about">Know-how v&nbsp;oblasti retailu a fintechu nejlépe proberete s&nbsp;Ondrou.</p>
         <div class="mdc-layout-grid__inner">
-          <div class="person--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-4"><img alt="[photo] Ondrej Tupý"
-                                                                                              loading="lazy"
-                                                                                              src="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_auto,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy"
-                                                                                              srcset="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy, https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1.5,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 1.5x, https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_2,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 2x, https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_3,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 3x"
-                                                                                              onerror="this.onerror=null; this.src='/assets/img/monk_logo-c877778634.png'"
-                                                                                              width="112" height="112">
+          <div class="person--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+            <img alt="[photo] Ondrej Tupý"
+              loading="lazy"
+              src="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_auto,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy"
+              srcset="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 1x,
+                      https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1.5,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 1.5x,
+                      https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_2,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 2x"
+              onerror="this.onerror=null; this.src='/assets/img/monk_logo-c877778634.png'"
+              width="112" height="112">
           </div>
           <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
             <p><span itemprop="name">Ondrej Tupý</span><br>
