--- a/www.topmonks.cz/src/html/macros/helpers.html
+++ b/www.topmonks.cz/src/html/macros/helpers.html
@@ -6,7 +6,7 @@
 {% endmacro %}
 
 {% macro css(stylesheet) -%}
-<link rel="stylesheet" href="{{ '/stylesheets/components/' ~ stylesheet ~ '/index.css' }}">
+<link rel="stylesheet" href="{{ '/assets/css/components/' ~ stylesheet ~ '/index.css' }}">
 {%- endmacro %}
 
 
