--- a/www.topmonks.cz/src/html/volna-mista/index.html
+++ b/www.topmonks.cz/src/html/volna-mista/index.html
@@ -5,7 +5,7 @@
 {% block head %}
 <link rel="modulepreload" href="https://unpkg.com/lit-html@1.1.0/lit-html.js?module">
 <link rel="preload" as="fetch" href="https://hire.withgoogle.com/v2/api/t/topmonkscom/public/jobs" crossorigin="anonymous">
-<link rel="stylesheet" href="/stylesheets/jobs.css">
+<link rel="stylesheet" href="/assets/css/jobs.css">
 {% endblock %}
 
 {% block content %}
@@ -569,8 +569,7 @@
                src="https://res.cloudinary.com/topmonks/image/fetch/w_112,f_auto/https://insight.topmonks.com/avatar/ales-roubicek"
                srcset="https://res.cloudinary.com/topmonks/image/fetch/w_112,f_auto/https://insight.topmonks.com/avatar/ales-roubicek 1x,
                        https://res.cloudinary.com/topmonks/image/fetch/w_112,f_auto,dpr_1.5/https://insight.topmonks.com/avatar/ales-roubicek 1.5x,
-                       https://res.cloudinary.com/topmonks/image/fetch/w_112,f_auto,dpr_2/https://insight.topmonks.com/avatar/ales-roubicek 2x,
-                       https://res.cloudinary.com/topmonks/image/fetch/w_112,f_auto,dpr_3/https://insight.topmonks.com/avatar/ales-roubicek 3x,"
+                       https://res.cloudinary.com/topmonks/image/fetch/w_112,f_auto,dpr_2/https://insight.topmonks.com/avatar/ales-roubicek 2x"
                onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'"
                width="112" height="112">
         </div>
