--- a/blockchain.topmonks.com/src/html/shared/header.html
+++ b/blockchain.topmonks.com/src/html/shared/header.html
@@ -1,5 +1,4 @@
-<link rel="stylesheet" href="/stylesheets/header.css">
-<link rel="stylesheet" href="/stylesheets/style.css">
+<link rel="stylesheet" href="/assets/css/header.css">
 <header class="tm-app-bar">
   <div class="mdc-layout-grid layout-wrapper">
     <div class="mdc-layout-grid__inner">
