--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -17,7 +17,6 @@
   <meta property="og:type" content="company">
   <meta property="og:url" content="https://www.topmonks.cz/">
   <meta property="og:site_name" content="TopMonks.cz">
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
   <style>
 
     @media screen and (max-width: 479px) {
@@ -58,13 +57,13 @@
       }
     }
   </style>
-  <link rel="stylesheet" href="/stylesheets/v2.css">
+  <link rel="stylesheet" href="/assets/css/v2.css">
 {% endblock %}
 
 {% block content %}
   <script>document.querySelector(".tm-app-bar").classList.add("tm-app-bar--sticky");</script>
 
-  <link rel="stylesheet" href="/stylesheets/hp/jumbotron.css">
+  <link rel="stylesheet" href="/assets/css/hp/jumbotron.css">
   <section class="main-info jumbotron">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
@@ -98,7 +97,7 @@
     </div>
   </section>
 
-  <link rel="stylesheet" href="/stylesheets/hp/how-we-work.css">
+  <link rel="stylesheet" href="/assets/css/hp/how-we-work.css">
   <section id="akcelerace-webu" class="how-we-work">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
@@ -232,7 +231,7 @@
     </div>
   </section>
 
-  <link rel="stylesheet" href="/stylesheets/hp/cooperation.css">
+  <link rel="stylesheet" href="/assets/css/hp/cooperation.css">
   <section class="cooperation">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
@@ -260,7 +259,7 @@
     <hr>
   </div>
 
-  <link rel="stylesheet" href="/stylesheets/hp/advicing.css">
+  <link rel="stylesheet" href="/assets/css/hp/advicing.css">
   <section id="advicing" class="we-advice">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
@@ -317,7 +316,7 @@
     <hr>
   </div>
 
-  <link rel="stylesheet" href="/stylesheets/hp/testimonials.css">
+  <link rel="stylesheet" href="/assets/css/hp/testimonials.css">
   <section class="testimonials">
     <div class="tm-bgnd-wrapper">
       <div class="mdc-layout-grid">
@@ -422,6 +421,5 @@
       </div>
     </div>
   </section>
-
 
 {% endblock %}
