--- a/www.topmonks.cz/src/html/it-retail/index.html
+++ b/www.topmonks.cz/src/html/it-retail/index.html
@@ -39,11 +39,11 @@
     }
   }
 </style>
+<link rel="stylesheet" href="/assets/css/v2.css">
+<link rel="stylesheet" href="/assets/css/sub-pages/main.css">
 {% endblock %}
 
 {% block content %}
-<link rel="stylesheet" href="/stylesheets/v2.css">
-<link rel="stylesheet" href="/stylesheets/sub-pages/main.css">
 
 <section class="jumbotron">
   <div class="mdc-layout-grid">
@@ -151,7 +151,7 @@
 <div class="tm-layout-wrapper line-between mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
   <hr>
 </div>
-<link rel="stylesheet" href="/stylesheets/hp/advicing.css">
+<link rel="stylesheet" href="/assets/css/hp/advicing.css">
 <section class="networking">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
@@ -231,7 +231,7 @@
 <div class="tm-layout-wrapper line-between mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
   <hr>
 </div>
-<link rel="stylesheet" href="/stylesheets/sub-pages/testimonials.css">
+<link rel="stylesheet" href="/assets/css/sub-pages/testimonials.css">
 <section class="testimonials">
   <div class="tm-bgnd-wrapper">
     <div class="mdc-layout-grid">
@@ -274,7 +274,7 @@
     </div>
   </div>
 </section>
-<link rel="stylesheet" href="/stylesheets/sub-pages/contact-us.css">
+<link rel="stylesheet" href="/assets/css/sub-pages/contact-us.css">
 <section class="contact-us mdc-layout-grid">
   <div class="mdc-layout-grid__inner tm-layout-wrapper">
     <div class="page_sub-title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -287,12 +287,15 @@
       <h3><b>Konzultace v&nbsp;retailu a fintechu</b></h3>
       <p class="box_text-about">Know-how v&nbsp;oblasti retailu a fintechu nejlépe proberete s&nbsp;Ondrou.</p>
       <div class="mdc-layout-grid__inner">
-        <div class="person--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-4"><img alt="[photo] Ondrej Tupý"
-                                                                                            loading="lazy"
-                                                                                            src="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_auto,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy"
-                                                                                            srcset="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy, https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1.5,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 1.5x, https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_2,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 2x, https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_3,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 3x"
-                                                                                            onerror="this.onerror=null; this.src='/assets/img/monk_logo-c877778634.png'"
-                                                                                            width="112" height="112">
+        <div class="person--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+          <img alt="[photo] Ondrej Tupý"
+            loading="lazy"
+            src="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_auto,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy"
+            srcset="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 1x,
+                    https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1.5,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 1.5x,
+                    https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_2,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 2x"
+            onerror="this.onerror=null; this.src='/assets/img/monk_logo-c877778634.png'"
+            width="112" height="112">
         </div>
         <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
           <p><span itemprop="name">Ondrej Tupý</span><br>
@@ -303,8 +306,4 @@
     </div>
   </div>
 </section>
-
-
-
-
 {% endblock %}
