--- a/www.topmonks.cz/src/html/potkejte-nas/index.html
+++ b/www.topmonks.cz/src/html/potkejte-nas/index.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/topmonks.html' %}
 {% block title %}Kde nás najdete - TopMonks{% endblock %}
 {% block head %}
-<link rel="stylesheet" href="/stylesheets/meet-us.css">
+<link rel="stylesheet" href="/assets/css/meet-us.css">
 {% endblock %}
 
 {% block content %}
@@ -162,7 +162,5 @@
     </div>
   </div>
 </section>
-
-
 
 {% endblock %}
