--- a/www.topmonks.cz/src/html/shared/footer.html
+++ b/www.topmonks.cz/src/html/shared/footer.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/stylesheets/footer.css">
+<link rel="stylesheet" href="/assets/css/footer.css">
 
 <footer class="tm-footer">
   <div class="nav-and-contacts">
