--- a/www.topmonks.cz/src/html/shared/header.html
+++ b/www.topmonks.cz/src/html/shared/header.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/stylesheets/header.css">
+<link rel="stylesheet" href="/assets/css/header.css">
 <header class="tm-app-bar">
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
