[blockchain.topmonks.com] using cloudinary url helper

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -296,7 +296,8 @@
               <article class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                   <img width="100%" alt="Photo for the article"
-                       src="https://res.cloudinary.com/topmonks/image/upload/v1574084565/blockchain.topmonks.com/article-img01.png">
+                       src="{{ "blockchain.topmonks.com/article-img01.png" | cloudinaryUrl(width=480) }}"
+                  >
                 </div>
                 <div class="blog__box-body mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                   <span class="published-date">NOVEMBER 14TH 2019</span>
@@ -304,7 +305,7 @@
                   <div
                     class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
                     <img class="person__photo"
-                         src="https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg"
+                         src="{{ "avatar/josef-tetek.jpg" | cloudinaryUrl(width=32) }}"
                          alt="[photo] Josef Tětek" width="32"
                          height="32">
                     <span class="name">Josef Tětek</span>
@@ -327,7 +328,7 @@
 
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                   <img width="100%" alt="Photo for an article"
-                       src="/images/articles-img/2019-11-11.jpg">
+                       src="{{ "blockchain.topmonks.com/article-img02.png" | cloudinaryUrl(width=480) }}">
                 </div>
                 <div class="blog__box-body mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                   <span class="published-date">NOVEMBER 11TH 2019</span>
@@ -335,7 +336,7 @@
                   <div
                     class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
                     <img class="person__photo"
-                         src="https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg"
+                         src="{{ "avatar/josef-tetek.jpg" | cloudinaryUrl(width=32) }}"
                          alt="[photo] Josef Tětek" width="32"
                          height="32">
                     <span class="name">Josef Tětek</span>
@@ -358,7 +359,7 @@
 
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                   <img width="100%" alt="Photo for an article"
-                       src="/images/articles-img/2019-11-07.jpg">
+                       src="{{ "blockchain.topmonks.com/article-img03.png" | cloudinaryUrl(width=480) }}">
                 </div>
                 <div class="blog__box-body mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                   <span class="published-date">NOVEMBER 7TH 2019</span>
@@ -366,7 +367,7 @@
                   <div
                     class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
                     <img class="person__photo"
-                         src="https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg"
+                         src="{{ "avatar/josef-tetek.jpg" | cloudinaryUrl(width=32) }}"
                          alt="[photo] Josef Tětek" width="32"
                          height="32">
                     <span class="name">Josef Tětek</span>
@@ -401,7 +402,7 @@
 
           <div class="team-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
             <img class="person__photo"
-                 src="https://res.cloudinary.com/topmonks/image/upload/v1574088319/avatar/lea-petrasova.jpg"
+                 src="{{ "avatar/lea-petrasova.jpg" | cloudinaryUrl(width=92) }}"
                  alt="[photo] Lea Petrášová" width="92" height="92">
             <h3>Lea Petrášová</h3>
             <p>Blockchain & Crypto&nbsp;Projects</p>
@@ -426,7 +427,7 @@
 
           <div class="team-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
             <img class="person__photo"
-                 src="https://res.cloudinary.com/topmonks/image/upload/v1569583487/avatar/mrkva-lumir.jpg"
+                 src="{{ "avatar/mrkva-lumir.jpg" | cloudinaryUrl(width=92) }}"
                  alt="[photo] Lumír Mrkva" width="92" height="92">
             <h3>Lumír Mrkva</h3>
             <p>Tech Lead</p>
@@ -453,7 +454,7 @@
           </div>
           <div class="team-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
             <img class="person__photo"
-                 src="https://res.cloudinary.com/topmonks/image/upload/v1574088474/avatar/josef-tetek.jpg"
+                 src="{{ "avatar/josef-tetek.jpg" | cloudinaryUrl(width=92) }}"
                  alt="[photo] Josef Tětek" width="92" height="92">
             <h3>Josef Tětek</h3>
             <p>Crypto Analyst</p>
