[studio.topmonks.com] Using cloudinary helper in pages and styles

--- a/studio.topmonks.com/src/html/index.html
+++ b/studio.topmonks.com/src/html/index.html
@@ -720,7 +720,7 @@
       <img
         class="team__photo"
         alt=""
-        src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto/v1558761742/startup%20studio/team.jpg"
+        src="{{ "startup%20studio/team.jpg" | cloudinaryUrl(width=1920) }}"
       />
       <figcaption>
         <div class="mdc-layout-grid">
