Fixing email address

--- a/www.hookamonk.com/src/html/index.html
+++ b/www.hookamonk.com/src/html/index.html
@@ -107,7 +107,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
   <div class="photos"><img src="images/img_hookaspot.png" srcset="images/img_hookaspot-p-500.png 500w, images/img_hookaspot-p-800.png 800w, images/img_hookaspot-p-1080.png 1080w, images/img_hookaspot.png 1424w" sizes="(max-width: 991px) 100vw, (max-width: 1898px) 75vw, 1424px" alt=""><img src="images/story.svg" data-w-id="3adffdf6-93a0-b9ad-a11a-9de5d61356d9" alt=""></div>
   <div class="story w-container">
-    <h3 data-w-id="948d3f79-c0cd-e5ec-14d4-a020352b068d" class="subheading">We had a dream: <span class="gold">To smoke the best hookah ever</span>. We were never fully satisfied with those available in the market. So we made it ourselves.<br><br>Interested? Let&#x27;s chat.<br><a href="mailto:sales@hookahmonk.com?subject=I%20want%20to%20chat%20about%20HookaMonk" class="link">sales@hookahmonk.com</a></h3>
+    <h3 data-w-id="948d3f79-c0cd-e5ec-14d4-a020352b068d" class="subheading">We had a dream: <span class="gold">To smoke the best hookah ever</span>. We were never fully satisfied with those available in the market. So we made it ourselves.<br><br>Interested? Let&#x27;s chat.<br><a href="mailto:sales@hookamonk.com?subject=I%20want%20to%20chat%20about%20HookaMonk" class="link">sales@hookamonk.com</a></h3>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
