[monkslab.cz] Assets optimizations and markup fixes

--- a/monkslab.cz/src/html/clenstvi/index.html
+++ b/monkslab.cz/src/html/clenstvi/index.html
@@ -9,10 +9,10 @@
   <meta name="description" content="Monks Lab je otevřený kreativní prostor, který umožňuje kutilům všeho druhu, kreativcům a studenům navrhovat a realizovat jejich nápady.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://monkslab.cz/">
-  <link rel="stylesheet" href="/stylesheets/main.css">
-  <link rel="stylesheet" href="/stylesheets/header.css">
-  <link rel="stylesheet" href="/stylesheets/clenstvi.css">
+  <link rel="stylesheet" href="/assets/css/main.css">
+  <link rel="stylesheet" href="/assets/css/clenstvi.css">
 </head>
+<body>
 <header class="app-bar">
   <div class="mdc-layout-grid layout-width">
     <div class="mdc-layout-grid__inner">
@@ -120,7 +120,6 @@
     }
   </script>
 </header>
-<body>
 <section class="intro">
   <div class="mdc-layout-grid layout-width">
     <div class="mdc-layout-grid__inner">
