--- a/monkslab.cz/src/html/index.html
+++ b/monkslab.cz/src/html/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Monks Lab je otevřený kreativní prostor, který umožňuje kutilům všeho druhu, kreativcům a studenům navrhovat a realizovat jejich nápady.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://monkslab.cz/">
-  <link rel="stylesheet" href="/stylesheets/main.css">
+  <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -18,6 +18,7 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 </head>
+<body>
 <header class="app-bar">
   <div class="mdc-layout-grid layout-width">
     <div class="mdc-layout-grid__inner">
@@ -125,7 +126,6 @@
     }
   </script>
 </header>
-<body>
 <section class="intro hp-intro">
   <div class="mdc-layout-grid layout-width">
     <div class="mdc-layout-grid__inner">
