--- a/monkslab.cz/src/html/index.html
+++ b/monkslab.cz/src/html/index.html
@@ -10,9 +10,8 @@
       content="width=device-width,initial-scale=1,viewport-fit=cover"
     />
     <link rel="preconnect" href="https://www.google.com" />
-    <link rel="preconnect" href="https://maps.gstatic.com" />
-    <link rel="preconnect" href="https://maps.googleapis.com" />
-    <link rel="preconnect" href="https://www.google.com" />
+    <link rel="preconnect" href="https://maps.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://maps.googleapis.com" crossorigin />
     <meta
       name="description"
       content="Monks Lab je otevřený kreativní prostor, který umožňuje kutilům všeho druhu, kreativcům a studenům navrhovat a realizovat jejich nápady."
