--- a/monkstage.topmonks.com/src/html/index.html
+++ b/monkstage.topmonks.com/src/html/index.html
@@ -1,5 +1,6 @@
-{% extends 'layouts/index.html' %} {% from 'macros/helpers.html' import
-speakerImage %} {% block title %} #monkstage Blockchain Edition | TopMonks {%
+{% extends 'layouts/index.html' %}
+{% from 'macros/helpers.html' import speakerImage %}
+{% block title %} #monkstage Blockchain Edition | TopMonks {%
 endblock %} {% block head %}
 <meta
   name="description"
