Adding support link in order to pass f*ing App Store review

--- a/session-monk.topmonks.com/src/html/index.html
+++ b/session-monk.topmonks.com/src/html/index.html
@@ -16,6 +16,7 @@
     <h2>Your session based application</h2>
     <p>Use our generic fully skinnable app to rate and control various session based events. Be it a coffee tasting,
     a game with your kids or an excercise in a gym, the ultimate application is up to you. </p>
+    <p>support: <a href="mailto:support@topmonks.com">support@topmonks.com</a></p>
   </div>
 </body>
 
