--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -7,14 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <link rel="preconnect" href="https://ajax.googleapis.com">
-  <link rel="preconnect" href="//cdnjs.cloudflare.com">
-  <link rel="preconnect" href="//use.typekit.net">
-  <link rel="preconnect" href="//cdn.jsdelivr.net">
-  <link rel="preconnect" href="//www.google-analytics.com">
-  <link rel="preconnect" href="//static.hotjar.com">
-  <link rel="preload" as="style" href="https://use.typekit.net/her1ktw.css">
-  <link rel="preload" as="script" href="https://www.googletagmanager.com/gtm.js?id=GTM-KJBJZ9M">
+  <link rel="preconnect" href="https://res.cloudinary.com">
   <link rel="stylesheet" href="https://use.typekit.net/her1ktw.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons&amp;display=block">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
