--- a/session-monk.topmonks.com/src/html/index.html
+++ b/session-monk.topmonks.com/src/html/index.html
@@ -1,23 +1,64 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <title>TopMonks</title>
+  <title>Session Monk by TopMonks</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
   <meta name="apple-itunes-app" content="app-id=1489139811">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5c86ff">
+  <meta name="msapplication-TileColor" content="#5c86ff">
+  <meta name="theme-color" content="#ffffff">
+  <link rel="canonical" href="https://session-monk.topmonks.com/">
+  {% include "common/futura.njk" %}
+  <style>
+    body {
+      font-family: futura-pt, sans-serif;
+    }
+
+    main {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      height: 90vh;
+      max-width: 480px;
+      margin: 0 auto;
+      text-align: center;
+    }
+    h1 {
+      font-size: 4em;
+      margin-bottom: 0;
+      color: #5c86ff;
+    }
+    h2 {
+      text-transform: uppercase;
+      margin-top: 0;
+      color: #999;
+    }
+    a {
+      color: #ef762f;
+    }
+  </style>
 </head>
 
 <body>
-  <div style="display: flex; justify-content: center; align-items: center;flex-direction: column;height: 90vh;">
-    <h1>Session Monk</h1>
-    <h2>Your session based application</h2>
-    <p>Use our generic fully skinnable app to rate and control various session based events. Be it a coffee tasting,
-    a game with your kids or an excercise in a gym, the ultimate application is up to you. </p>
-    <p>support: <a href="mailto:support@topmonks.com">support@topmonks.com</a></p>
-  </div>
+<main>
+  <h1>Session Monk</h1>
+  <h2>Your session based application</h2>
+  <p>Use our generic fully skinnable app to rate and control various session based events. Be it a coffee tasting,
+    a game with your kids or an exercise in a gym, the ultimate application is up to you.</p>
+  <p>support: <a href="mailto:support@topmonks.com">support@topmonks.com</a></p>
+</main>
+<footer>
+  <p>© 2020 TopMonks s.r.o.</p>
+</footer>
 </body>
 
 </html>
