--- a/www.hookamonk.com/src/html/index.html
+++ b/www.hookamonk.com/src/html/index.html
@@ -22,13 +22,15 @@
   <link href="images/favicon-small-1.jpg" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip-1.jpg" rel="apple-touch-icon">
   <style>.w-container {max-width: 1170px;}</style>
-  <!--  Google Tag Manager  -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-NBP9CD2');</script>
-  <!--  End Google Tag Manager  -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-51368639-11"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-51368639-11');
+</script>
 </head>
 <body class="body">
   <div class="fold">
